Bug #21618: NULL shown as empty string in client

The column's NOT NULL flag doesn't affect what we should print.  Remove the
wrong logic that does check it.

Also, verify that this and the previous two tests print the same data as 
other output formats.