client/mysql.cc
@@ -2270,10 +2270,8 @@ print_table_data(MYSQL_RES *result)
   MYSQL_ROW	cur;
   MYSQL_FIELD	*field;
   bool		*num_flag;
-  bool		*not_null_flag;
 
   num_flag=(bool*) my_alloca(sizeof(bool)*mysql_num_fields(result));
-  not_null_flag=(bool*) my_alloca(sizeof(bool)*mysql_num_fields(result));
   if (info_flag)
   {
     print_field_types(result);
@@ -2307,7 +2305,6 @@ print_table_data(MYSQL_RES *result)
                                             MAX_COLUMN_LENGTH),
 		  field->name);
       num_flag[off]= IS_NUM(field->type);
-      not_null_flag[off]= IS_NOT_NULL(field->flags);
     }
     (void) tee_fputs("\n", PAGER);
     tee_puts((char*) separator.ptr(), PAGER);
@@ -2328,7 +2325,7 @@ print_table_data(MYSQL_RES *result)
       uint extra_padding;
 
       /* If this column may have a null value, use "NULL" for empty.  */
-      if (! not_null_flag[off] && (cur[off] == NULL))
+      if (cur[off] == NULL)
       {
         buffer= "NULL";
         data_length= 4;
@@ -2368,7 +2365,6 @@ print_table_data(MYSQL_RES *result)
   }
   tee_puts((char*) separator.ptr(), PAGER);
   my_afree((gptr) num_flag);
-  my_afree((gptr) not_null_flag);
 }
 
 
